--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -90,4 +90,30 @@
     <string name="internal_storage">накопитель</string>
     <string name="system_junked_hard">Сильно</string>
     <string name="system_junked_lite">Очищена</string>
+
+
+    <!--AB Testing-->
+    <string name="ab_prof_clean">Профессиональная очистка с</string>
+    <string name="ab_cleaner">Phone cleaner</string>
+    <string name="ab_ads">Без рекламы</string>
+    <string name="ab_no_stop">Очистка телефона без прерываний на рекламу</string>
+    <string name="ab_cache">Очистка кэша приложений</string>
+    <string name="ab_analyze">Анализирует все приложения в телефоне и удаляет кэш ненужных приложений, если это не помешает работе телефона</string>
+    <string name="ab_boost">Ускорение работы телефона</string>
+    <string name="ab_background">Закрытие приложений,которые работают в фоновом режиме,для освобождения оперативной памяти и ускорения работы телефона</string>
+    <string name="ab_cool_cpu">Охлаждение CPU</string>
+    <string name="ab_cool_cpu_text">Позволяет одним нажатием эффективно охладить температуру CPU вашего телефона</string>
+    <string name="ab_battery">Экономия заряда аккумулятора</string>
+    <string name="ab_battery_text">Экономия заряда аккумулятора. Позволяет одним нажатием закрыть приложения. При низком заряде аккумулятора эта функция напомнит вам закрыть приложения, которые интенсивно расходуют заряд аккумулятора</string>
+    <string name="ab_next">Далее</string>
+    <string name="ab_free_with_ads">Продолжить бесплатно с рекламой</string>
+    <string name="ab_vip_version">VIP версия</string>
+    <string name="ab_unlock">Разблокируйте весь контент и уберите рекламу в один клик!</string>
+    <string name="ab_get_vip">ПОЛУЧИТЬ VIP ВЕРСИЮ</string>
+    <string name="ab_bg_text">В среднем сканирование телефона с помощью Phone Cleaner ускоряет работу телефона на 53%</string>
+    <string name="ab_bg_title">Экономия заряда батареи на 47%!</string>
+    <string name="ab_please_wait">Подождите немного</string>
+    <string name="ab_optimization">Идет оптимизация вашего устройства...</string>
+    <string name="ab_sg_text">В среднем сканирование телефона с помощью Phone Cleaner ускоряет работу телефона на 53%</string>
+    <string name="ab_sg_title">А так же сокращает вероятность заражения высокотехнологичным вирусом-шпионом на 97%</string>
 </resources>
